# research

./: AuditPrivacy.xlsx  LICENSE  README.md  pyproject.toml  requirements.txt
experiment/: constants.py  cust_opacus.py  models.py  result.csv  run.py  trash.py
experiment/src/: constants.py  cust_opacus.py  data.py  mia.py  models.py  prune.py  run.py
results/: get_kaggle.py  plot.py
results/jax/: AuditResults.xlsx  plot.py
results/linear/: AuditResults.xlsx  plot.py
results/new/: AuditResults.xlsx  plot.py
src/experiment/: constants.py  prune.py
