[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research_brandonedmunds2"
version = "0.0.1"
authors = [
  { name="Brandon Edmunds" },
]
description = "research"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/brandonedmunds2/research"
"Bug Tracker" = "https://github.com/brandonedmunds2/research/issues"